--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,8 @@
 name: app_ops_watcher
-description: "A new Flutter plugin project."
+description: "Flutter plugin for watching App Ops Manager. Not supported on iOS."
 version: 0.0.1
+repository: https://github.com/hirameee55/app_ops_watcher
+issue_tracker: https://github.com/hirameee55/app_ops_watcher/issues
 
 environment:
   sdk: '>=3.3.1 <4.0.0'
